--- a/website/templates/website/base.html
+++ b/website/templates/website/base.html
@@ -11,7 +11,7 @@
  <div class="logo">LOGO</div>
  <nav>
   <a href="/">Início</a>
-  <a href="/funcionalidades/">Funcionalidades</a>
+  <a href="/funcionalidades/">Aplicativos</a>
   <a href="/planos/">Planos</a>
   <a href="/contato/">Contato</a>
  </nav>
